Fix text wrap

--- a/style.css
+++ b/style.css
@@ -252,7 +252,7 @@ body {
   }
 
   .picture-container > .name {
-    max-width: 400px;
+    max-width: 700px;
     font-size: min(calc(-1.2rem + 10vw), 4.3rem);
     text-wrap: nowrap;
     position: absolute;
